versions/v2.8/modules/zh/pages/cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc
= Azure 中存储类的配置
:revdate: 2024-09-25
:page-revdate: {revdate}

如果你的节点使用 Azure VM，则可以使用 https://docs.microsoft.com/en-us/azure/aks/azure-files-dynamic-pv[Azure 文件]作为集群的存储类（StorageClass）。

为了让 Azure 创建所需的存储资源，请执行以下步骤操作：

. xref:cluster-deployment/set-up-cloud-providers/azure.adoc[配置 Azure 云提供商]。
. 配置 `kubectl` 以连接到你的集群。
. 复制 ServiceAccount 的 `ClusterRole` 和 `ClusterRoleBinding` 清单：
```yml
--
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: system:azure-cloud-provider
rules:
 ** apiGroups: ['']
resources: ['secrets']
verbs:     ['get','create']
--
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
name: system:azure-cloud-provider
roleRef:
kind: ClusterRole
apiGroup: rbac.authorization.k8s.io
name: system:azure-cloud-provider
subjects:
 ** kind: ServiceAccount
name: persistent-volume-binder
namespace: kube-system
```
. 使用以下命令在集群中进行创建：
+
----
# kubectl create -f <MANIFEST>
----
