versions/v2.14/modules/zh/pages/cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc
= 在 Azure 中配置存储类
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/use-windows-clusters/azure-storageclass-configuration.adoc 
:product-path: cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc
ifeval::["{build-type}" != "community"]
:xref-azure-cloud-provider: xref:cluster-deployment/set-up-cloud-providers/azure.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-azure-cloud-provider: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/azure.adoc
endif::[]

如果您使用 Azure 虚拟机作为节点，可以将 https://docs.microsoft.com/en-us/azure/aks/azure-files-dynamic-pv[Azure 文件] 作为集群的 StorageClass。

为了让 Azure 平台创建所需的存储资源，请按照以下步骤操作：

. {xref-azure-cloud-provider}[配置 Azure 云提供商。]
. 配置 `kubectl` 以连接到您的集群。
. 复制服务帐户的 `ClusterRole` 和 `ClusterRoleBinding` 清单： +
  ```yml +
  -- +
  apiVersion: rbac.authorization.k8s.io/v1 +
  kind:ClusterRole +
  metadata: +
    name: system:azure-cloud-provider +
  rules:
 ** apiGroups: [''] +
resources: ['secrets'] +
verbs:     ['get','create'] +
  -- +
  apiVersion: rbac.authorization.k8s.io/v1 +
  kind:ClusterRoleBinding +
  metadata: +
name: system:azure-cloud-provider +
  roleRef: +
kind:ClusterRole
apiGroup: rbac.authorization.k8s.io
name: system:azure-cloud-provider
  subjects:
 ** kind:ServiceAccount +
name: persistent-volume-binder +
namespace: kube-system +
  ```
. 请在您的集群中使用以下任一命令来创建它们。
+
----
# kubectl create -f <MANIFEST>
----
